--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1,8 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e3c61204-6794-4d80-96ca-a1a9a13dac19",
+   "metadata": {},
+   "source": [
+    "BASIC GIT COMMAND\n",
+    "1. git init (atacking folder with git)\n",
+    "2. git status (to see status of file)\n",
+    "3. git add . (add all file to stagging)\n",
+    "4. git commit -m \"message\" (to commit from stagging)\n",
+    "5. git remote add origin repository_url (to remote github repo)\n",
+    "6. git push -u origin master"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "id": "7f8fae3d-bc51-454b-9e06-5c04bf8e9fd1",
    "metadata": {},
    "outputs": [
@@ -17,10 +31,10 @@
     {
      "data": {
       "text/plain": [
-       "30"
+       "13"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +45,7 @@
     "data = 4\n",
     "print (data)\n",
     "data\n",
-    "3*10"
+    "3+10"
    ]
   },
   {
