--- a/MINGGUKE4.ipynb
+++ b/MINGGUKE4.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "4dc19197-0176-44b7-86fd-cad9948fb14d",
    "metadata": {},
    "outputs": [
@@ -83,20 +83,20 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "masukan Nilai 1: 20\n",
-      "masukan Nilai 2: 10\n"
+      "masukan Nilai 1: 10\n",
+      "masukan Nilai 2: 5\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Apakah 20 Sama dengan 10 ? False\n",
-      "Apakah 20 Tidak sama dengan 10 ? False\n",
-      "Apakah 20 Lebih besar 10 ? False\n",
-      "Apakah 20 Lebih kecil 10 ? False\n",
-      "Apakah 20 Lebih kecil atau sama dengan 10 ? False\n",
-      "Apakah 20 Lebih besar atau sama dengan 10 ? False\n"
+      "Apakah 10 Sama dengan 5 ? False\n",
+      "Apakah 10 Tidak sama dengan 5 ? False\n",
+      "Apakah 10 Lebih besar 5 ? False\n",
+      "Apakah 10 Lebih kecil 5 ? False\n",
+      "Apakah 10 Lebih kecil atau sama dengan 5 ? False\n",
+      "Apakah 10 Lebih besar atau sama dengan 5 ? False\n"
      ]
     }
    ],
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "id": "1ddd5144-97e0-4826-9916-121c9ea7228c",
    "metadata": {},
    "outputs": [
@@ -219,30 +219,30 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Isikan biangan 1: 20\n",
-      "Isikan biangan 2: 20\n"
+      "Isikan biangan 1: 13\n",
+      "Isikan biangan 2: 1\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0b10100\n",
-      "0b10100\n",
+      "0b1101\n",
+      "0b1\n",
       "----------&\n",
-      "0b10100 = 20\n",
-      "0b10100\n",
-      "0b10100\n",
+      "0b1 = 1\n",
+      "0b1101\n",
+      "0b1\n",
       "----------|\n",
-      "0b10100 = 20\n",
-      "0b10100\n",
-      "0b10100\n",
+      "0b1101 = 13\n",
+      "0b1101\n",
+      "0b1\n",
       "----------^\n",
-      "0b0 = 0\n",
-      "0b10100 Geser ke kiri sebanyak 20\n",
-      "Hasilnya adalah: 0b1010000000000000000000000 = 20971520\n",
-      "0b10100 Geser ke kiri sebanyak 20\n",
-      "Hasilnya adalah: 0b0 = 0\n"
+      "0b1100 = 12\n",
+      "0b1101 Geser ke kiri sebanyak 1\n",
+      "Hasilnya adalah: 0b11010 = 26\n",
+      "0b1101 Geser ke kiri sebanyak 1\n",
+      "Hasilnya adalah: 0b110 = 6\n"
      ]
     }
    ],
@@ -313,8 +313,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "aa9deea2-2ec4-4275-81cc-2990b33e4386",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (2419040778.py, line 18)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[11], line 18\u001b[1;36m\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
+   "source": [
+    "pisang = int(input(\"Isikan jumlah pisang:\"))\n",
+    "kolak = int(input(\"Isikan Jumlah Kolak:\"))\n",
+    "esBuah = int(input(\"Isikan Jumlah Es Buah\"))\n",
+    "\n",
+    "totalPisang = pisang * 13.000\n",
+    "totalKolak = kolak * 7000\n",
+    "totalEsBuah = esBuah * 15.000\n",
+    "print(\"Pisang\",pisang,\"* 13.000\",totalPisang)\n",
+    "print(\"Kolak\",pisang,\"* 7000\",totalKolak)\n",
+    "print(\"esBuah\",esBuah,\"* 15.000\",totalEsBuah)\n",
+    "print(\"=============\")\n",
+    "totalBelanja = totalPisang + totalKolak + totalEsBuah\n",
+    "print(\"Total Belanja :\", totalBelanja)\n",
+    "discount = 5 if totalBelanja > 25.000 else 0\n",
+    "print(\"Total Discount:\",discount,\"% ->\",totalBelanja * (discount/100))\n",
+    "print(\"Total Bayar :\", totalBelanja - (totalBelanja * (discount/100))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "9be162e8-eed2-43a3-bff1-6adc23af01ee",
+   "id": "791b446f-da90-414f-ac2b-fcf0ce2e3640",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +361,6 @@
     "totalPisang = pisang * 13.000\n",
     "totalKolak = kolak * 7000\n",
     "totalEsBuah = esBuah * 15.000\n",
-    "\n",
     "print(\"Pisang\",pisang,\"* 13.000\",totalPisang)\n",
     "print(\"Kolak\",pisang,\"* 7000\",totalKolak)\n",
     "print(\"esBuah\",esBuah,\"* 15.000\",totalEsBuah)\n",
@@ -334,9 +369,7 @@
     "print(\"Total Belanja :\", totalBelanja)\n",
     "discount = 5 if totalBelanja > 25.000 else 0\n",
     "print(\"Total Discount:\",discount,\"% ->\",totalBelanja * 9discount/100))\n",
-    "print(\"Total Bayar :\", totalBelanja - (totalBelanja * (discount/100))\n",
-    "\n",
-    "\n"
+    "print(\"Total Bayar :\", totalBelanja - (totalBelanja * (discount/100))\n"
    ]
   }
  ],
