--- a/MINGGUKE4.ipynb
+++ b/MINGGUKE4.ipynb
@@ -83,20 +83,20 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "masukan Nilai 1: 10\n",
-      "masukan Nilai 2: 5\n"
+      "masukan Nilai 1: 22\n",
+      "masukan Nilai 2: 22\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Apakah 10 Sama dengan 5 ? False\n",
-      "Apakah 10 Tidak sama dengan 5 ? False\n",
-      "Apakah 10 Lebih besar 5 ? False\n",
-      "Apakah 10 Lebih kecil 5 ? False\n",
-      "Apakah 10 Lebih kecil atau sama dengan 5 ? False\n",
-      "Apakah 10 Lebih besar atau sama dengan 5 ? False\n"
+      "Apakah 22 Sama dengan 22 ? True\n",
+      "Apakah 22 Tidak sama dengan 22 ? True\n",
+      "Apakah 22 Lebih besar 22 ? True\n",
+      "Apakah 22 Lebih kecil 22 ? True\n",
+      "Apakah 22 Lebih kecil atau sama dengan 22 ? True\n",
+      "Apakah 22 Lebih besar atau sama dengan 22 ? True\n"
      ]
     }
    ],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "0f01efe8-d130-40d8-9085-2e49006ad848",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Isikan Bilangan 1: 10\n",
+      "Isikan Bilangan 1: 22\n",
       "Isikan Bilangan 2: 10\n"
      ]
     },
