--- a/TugasMingguKe4.ipynb
+++ b/TugasMingguKe4.ipynb
@@ -2,52 +2,74 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e6b3174b-130a-47dd-89a8-dc8b115abcbd",
+   "id": "b24bb91c-cb83-4c21-8c5f-6936ec77192d",
    "metadata": {},
    "source": [
-    "1.OPERATOR ARITMATIKA"
+    "1. OPERATOR ARITMATIKA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "eaaf5992-b96a-4979-9eb9-845a2cd73508",
+   "execution_count": 6,
+   "id": "d00044b6-a6e5-4d1b-b535-7e78589f7b00",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Masukan Jumlah Apel Budi: 12\n",
+      "Masukan Teman Budi: 4\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Apel Yang Diterima Teman Budi Sebanyak= 3\n",
+      "Apel Yang Diterima Teman Budi Sebanyak= 3\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Masukan Tambahan Apel: 8\n",
+      "Masukan Jumlah Apel Diterima Teman Budi: 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Jadi jumlah Apel Yang Diterima Teman Budi dan Apel Tambahan Sebanyak= 11\n"
      ]
     }
    ],
    "source": [
-    "#soal 1\n",
-    "apelBudi = 12\n",
-    "temanBudi = 4\n",
+    "apelBudi = int(input(\"Masukan Jumlah Apel Budi:\"))\n",
+    "temanBudi = int(input(\"Masukan Teman Budi:\"))\n",
     "apelDiterima = int(apelBudi / temanBudi)\n",
     "print(\"Apel Yang Diterima Teman Budi Sebanyak=\",apelDiterima)\n",
     "\n",
-    "#soal2\n",
-    "tambahanApel = 8\n",
+    "\n",
+    "tambahanApel = int(input(\"Masukan Tambahan Apel:\"))\n",
+    "apelDiterima = int(input(\"Masukan Jumlah Apel Diterima Teman Budi:\"))\n",
     "jumlahApel = int(apelDiterima + tambahanApel)\n",
     "print(\"Jadi jumlah Apel Yang Diterima Teman Budi dan Apel Tambahan Sebanyak=\",jumlahApel)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "afef1629-d707-48ec-b7e8-780364701c48",
+   "id": "4da2e964-570d-4bb4-80ac-a7472a294cec",
    "metadata": {},
    "source": [
-    "2. OPERATOR PERBANDINGAN"
+    "2. OPERATOR OPERATOR PERBANDINGAN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "785c6958-0fa1-4034-a77d-332f522de12a",
+   "execution_count": 13,
+   "id": "08c73a31-e2af-4f4b-b86e-d3801132b4ea",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +89,7 @@
     }
    ],
    "source": [
-    "Siti = int(input(\"Masukan Tinggi Siti:\"))\n",
+    "Siti = int(input(\"Masukan Tinggi Siti:\")) \n",
     "Andi = int(input(\"Masukan Tinggi Andi:\"))\n",
     "lebihTinggi = Siti > Andi\n",
     "\n",
@@ -76,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cccf7ed-dfa0-4a56-b530-bd9d04261064",
+   "id": "8fbb58b7-3c7f-444e-84b0-b162602771e6",
    "metadata": {},
    "source": [
     "3. OPERATOR LOGIKA"
@@ -84,8 +106,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "fcd4a0ba-6d77-4fba-b47b-853710550a9c",
+   "execution_count": 22,
+   "id": "ae2ad6f9-f3b1-4c47-bdbf-1113814f9310",
    "metadata": {},
    "outputs": [
     {
@@ -109,17 +131,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a0f38cb-152e-4d4e-852b-0184b03e15aa",
+   "id": "18cf3323-61c5-45a6-8383-1709cab5149b",
    "metadata": {},
    "source": [
-    "4. OPERATOR BITWISE\n",
-    "   "
+    "4. OPERATOR BITWISE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "7672e391-2461-4624-87e5-60b43435e9c4",
+   "execution_count": 26,
+   "id": "fcc1120d-3ad7-4d59-bd13-2519ca6ea5b0",
    "metadata": {},
    "outputs": [
     {
@@ -153,37 +174,45 @@
     "angka1 = int(input(\"Isikan biangan 1:\"))\n",
     "angka2 = int(input(\"Isikan biangan 2:\"))\n",
     "\n",
-    "print(bin(number1))\n",
-    "print(bin(number2))\n",
+    "print(bin(angka1))\n",
+    "print(bin(angka2))\n",
     "print(\"----------&\")\n",
-    "print(bin(number1 & number2),\"=\",number1 & number2)\n",
+    "print(bin(angka1 & angka2),\"=\",angka1 & angka2)\n",
     "\n",
-    "print(bin(number1))\n",
-    "print(bin(number2))\n",
+    "print(bin(angka1))\n",
+    "print(bin(angka2))\n",
     "print(\"----------|\")\n",
-    "print(bin(number1 | number2),\"=\",number1 | number2) \n",
+    "print(bin(angka1 | angka2),\"=\",angka1 | angka2) \n",
     "\n",
-    "print(bin(number1))\n",
-    "print(bin(number2))\n",
+    "print(bin(angka1))\n",
+    "print(bin(angka2))\n",
     "print(\"----------^\")\n",
-    "print(bin(number1 ^ number2),\"=\",number1 ^ number2)\n"
+    "print(bin(angka1 ^ angka2),\"=\",angka1 ^ angka2)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1560b08a-8649-4db7-8439-108b540f839d",
+   "id": "dade65bf-20dc-4027-aa69-e18d1bd21ddb",
    "metadata": {},
    "source": [
-    "5. OPERATOR PENUGASAN\n",
-    "   "
+    "5. OPERATOR PENUGASAAN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "id": "10087841-14d1-48af-8f90-77b68a5a2630",
+   "execution_count": 29,
+   "id": "ad1c98c1-81cf-41fb-bc96-4183bbfa3cfc",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Isikan Saldo Awal: 50000\n",
+      "Isikan Isi Ulang : 20000\n",
+      "Membeli Paket: 30000\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -193,38 +222,16 @@
     }
    ],
    "source": [
-    "saldoPulsaAwal = 50000\n",
-    "ngisiUlang = 20000\n",
-    "membeliPaket = 30000\n",
-    "totalSaldoPulsa = (saldoPulsaAwal + ngisiUlang - membeliPaket)\n",
-    "print(totalSaldoPulsa)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "id": "b2b6b59d-06db-4702-83c6-c887f5eeef49",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "40000\n"
-     ]
-    }
-   ],
-   "source": [
-    "saldo = 50000\n",
-    "saldo += 20000\n",
-    "saldo -= 30000\n",
-    "print(saldo)\n",
-    "\n"
+    "saldoAwal = int(input(\"Isikan Saldo Awal:\"))\n",
+    "isiUlang = int(input(\"Isikan Isi Ulang :\"))\n",
+    "membeliPaket = int(input(\"Membeli Paket:\"))\n",
+    "totalSaldo = saldoAwal + isiUlang - membeliPaket\n",
+    "print(totalSaldo)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d131e05c-f3a2-4f76-b56d-0bb60cdc03dc",
+   "id": "2e56c016-29f9-4365-a35a-6581bd80abb6",
    "metadata": {},
    "source": [
     "6. OPERATOR KEANGGOTAAN"
@@ -232,8 +239,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "id": "00f9de6d-45f9-4585-be76-dfc373339273",
+   "execution_count": 32,
+   "id": "1a54ea33-9949-42d4-94f5-bf928b8d3c74",
    "metadata": {},
    "outputs": [
     {
@@ -257,16 +264,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "685b9f61-c269-4e07-b402-aa790e93528f",
+   "id": "cfa3f347-9e0b-4907-b416-a85897b8ae6f",
    "metadata": {},
    "source": [
-    "7. OPERATOR KEANGGOTAN"
+    "7. OPEARATOR IDENTITAS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
-   "id": "5dcc1513-6f5e-48ae-b234-4726c4f8ac60",
+   "execution_count": 35,
+   "id": "566b5f12-fd63-4f7b-88d2-7a818aa9c46e",
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7018eb39-24f7-43c9-ade8-4c49bb3c42a9",
+   "id": "5d3935b8-8fa2-463c-9cfc-01795c8a4464",
    "metadata": {},
    "source": [
     "8. OPERATOR TERNARY"
@@ -300,26 +307,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
-   "id": "52966488-08f8-4c55-8164-0ef292beeb48",
+   "execution_count": 44,
+   "id": "2f7293ab-d809-4b36-8caa-ff828c8c60a8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2037857863.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[179], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    lulus = if nilai >=70\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Masukkan angka:  190\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lebih Besar Dari 100\n"
      ]
     }
    ],
    "source": [
-    "nilai = int(input(\"Isikan nilai:\"))\n",
-    "totalNilai = \"Lulus\" if nilai >= 70 else \"Tidak Lulus\"\n",
-    "lulus = if nilai >=70\n",
-    "else\n",
-    "tidakLulus\n",
-    "print(nilai > totaNilai)\n"
+    "angka = int(input(\"Masukkan angka: \"))\n",
+    "hasil = \"Lebih Besar Dari 100\" if angka > 100 else \"Lebih Kecil Dari 100\"\n",
+    "print(hasil)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "c78736bf-1f28-4bfe-a178-4ede0a81bf30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Masukan Nilai:  10\n",
+      "Masukan nilai KKM:  75\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tidak Lulus\n"
+     ]
+    }
+   ],
+   "source": [
+    "nilai = int(input(\"Masukan Nilai: \"))\n",
+    "nilaiKKM = int(input(\"Masukan nilai KKM: \"))\n",
+    "status = \"Lulus\" if nilai >= nilaiKKM else \"Tidak Lulus\"\n",
+    "print(status)"
    ]
   }
  ],
