--- a/TugasMingguKe4.ipynb
+++ b/TugasMingguKe4.ipynb
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "id": "c78736bf-1f28-4bfe-a178-4ede0a81bf30",
    "metadata": {},
    "outputs": [
@@ -342,8 +342,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Masukan Nilai:  10\n",
-      "Masukan nilai KKM:  75\n"
+      "Masukan Nilai:  60\n"
      ]
     },
     {
@@ -356,7 +355,7 @@
    ],
    "source": [
     "nilai = int(input(\"Masukan Nilai: \"))\n",
-    "nilaiKKM = int(input(\"Masukan nilai KKM: \"))\n",
+    "nilaiKKM = 75\n",
     "status = \"Lulus\" if nilai >= nilaiKKM else \"Tidak Lulus\"\n",
     "print(status)"
    ]
