--- a/TugasSesi5.ipynb
+++ b/TugasSesi5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 162,
    "id": "76d8d21b-96fb-4aeb-b585-d9848f368f92",
    "metadata": {},
    "outputs": [
@@ -13,7 +13,7 @@
       "Masukkan nama Anda:  Muhammad Denindra Pratama\n",
       "Maskan nim Anda: 20240040290\n",
       "Masukkan umur Anda:  20 tahun\n",
-      "Masukkan universitas Anda:  Universitas Nusa Putra\n",
+      "Masukkan universitas Anda:  Nusa Putra Sukabumi\n",
       "Masukkan jurusan Anda:  Teknik Informatika\n"
      ]
     },
@@ -26,7 +26,7 @@
       "Nama: Muhammad Denindra Pratama\n",
       "Nim: 20240040290\n",
       "Umur: 20 tahun tahun\n",
-      "Universitas: Universitas Nusa Putra\n",
+      "Universitas: Nusa Putra Sukabumi\n",
       "Jurusan: Teknik Informatika\n"
      ]
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 166,
    "id": "6652ff18-7de3-49ff-9293-8542b93ec6b6",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Isikan Kalimat:  UNIVERSITA NUSA PUTRA SUKABUMI\n"
+      "Isikan Kalimat: UNIVERSITAS NUSA PUTRA SUKABUMI\n"
      ]
     },
     {
