--- a/TugasSesi5.ipynb
+++ b/TugasSesi5.ipynb
@@ -71,6 +71,7 @@
     }
    ],
    "source": [
+    "#kalimat = \n",
     "kalimat = input(\"Isikan Kalimat:\")\n",
     "kata = teks.split()\n",
     "\n",
