revisi lagi hhe

--- a/TugasSesi5.ipynb
+++ b/TugasSesi5.ipynb
@@ -71,7 +71,7 @@
     }
    ],
    "source": [
-    "#kalimat = \n",
+    "#UNIVERSITA NUSA PUTRA SUKABUMI\n",
     "kalimat = input(\"Isikan Kalimat:\")\n",
     "kata = teks.split()\n",
     "\n",
