--- a/TugasSesi5.ipynb
+++ b/TugasSesi5.ipynb
@@ -47,39 +47,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
-   "id": "6652ff18-7de3-49ff-9293-8542b93ec6b6",
+   "execution_count": null,
+   "id": "d319e7f6-6995-443a-ba5b-9ebc35301431",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Isikan Kalimat: UNIVERSITAS NUSA PUTRA SUKABUMI\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a. putra nusa\n",
-      "b. NIVERSITAS N SA P TRA S KABUMI\n",
-      "c. SUKABUMI PUTRA NUSA UNIVERSITAS\n",
-      "d. UNPS\n",
-      "e. TAS SA PU BUMI\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#UNIVERSITA NUSA PUTRA SUKABUMI\n",
-    "kalimat = input(\"Isikan Kalimat:\")\n",
+    "#UNIVERSITAS NUSA PUTRA SUKABUMI\n",
+    "teks = input(\"Isikan Kalimat:\")\n",
     "kata = teks.split()\n",
     "\n",
     "# a. putra nusa\n",
     "output_a = \"{} {}\".format(kata[2].lower(), kata[1].lower())\n",
     "print(\"a.\", output_a)\n",
     "# b. NIVERSITAS NSA PTRA SKABMI\n",
-    "output_b = \"{} {} {} {} {} {} {}\".format(teks[1:11], teks[12],teks[14:16], teks[17],teks[19:22], teks[23],teks[25:31])\n",
+    "output_b = \"{} {} {} {} {} {} {}\".format(teks[1:11], teks[12],teks[14:16], teks[17],teks[19:22], teks[23],teks[25:29])\n",
     "print(\"b.\", output_b)\n",
     "# c. SUKABUMI PUTRA NUSA UNIVERSITAS\n",
     "output_c = \"{} {} {} {}\".format(kata[3], kata[2], kata[1], kata[0])\n",
@@ -89,7 +70,7 @@
     "print(\"d.\", output_d)\n",
     "# e. TAS SAPU BUMI\n",
     "output_e = \"{} {} {}\".format(teks[8:11], teks[14:19], teks[27:])\n",
-    "print(\"e.\", output_e)\n"
+    "print(\"e.\", output_e)"
    ]
   }
  ],
