upadate tugas more and more

--- a/Percabangan.ipynb
+++ b/Percabangan.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "66ee699f-8355-48e0-939a-dcc73ba4425b",
    "metadata": {
     "id": "66ee699f-8355-48e0-939a-dcc73ba4425b"
@@ -79,16 +79,16 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Isikan Umur Tiket 1: 23\n",
-      "Isikan Umur Tiket 2:  22\n",
-      "Isikan Umur Tiket 3:  10\n"
+      "Isikan Umur Tiket 1: 12\n",
+      "Isikan Umur Tiket 2:  13\n",
+      "Isikan Umur Tiket 3:  20\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Harga Yang Harus di Bayar : Rp 60000\n"
+      "Total Harga Yang Harus di Bayar : Rp 50000\n"
      ]
     }
    ],
@@ -195,14 +195,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "55a9ec4f-531b-4326-bca3-e0d19b4be47d",
    "metadata": {
     "id": "55a9ec4f-531b-4326-bca3-e0d19b4be47d"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Masukan Nilai Rapot : 99\n",
+      "Masukan Penghasilan : 2500000\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hasil Beasiswa :Beasiswa Penuh\n"
+     ]
+    }
+   ],
    "source": [
-    "# add code here ..."
+    "nilai_rapot = float(input(\"Masukan Nilai Rapot :\" ))\n",
+    "penghasilan = int(input(\"Masukan Penghasilan :\"))\n",
+    "\n",
+    "def Beasiswa(nilai_rapot, penghasilan):\n",
+    "    if nilai_rapot >= 90 and penghasilan < 5000000:\n",
+    "        return \"Beasiswa Penuh\"\n",
+    "    elif nilai_rapot >= 90 and penghasilan < 8000000:\n",
+    "        return \"Beasiswa 50%\"\n",
+    "    else:\n",
+    "        return \"Anda Tidak Mendapatkan Beasiswa\"\n",
+    "\n",
+    "hasil_beasiswa = Beasiswa(nilai_rapot, penghasilan)\n",
+    "print(f\"Hasil Beasiswa :{hasil_beasiswa}\")\n"
    ]
   },
   {
@@ -223,14 +251,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2c00f464-3390-4c94-9ec2-4b63c55b871b",
    "metadata": {
     "id": "2c00f464-3390-4c94-9ec2-4b63c55b871b"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Masukam Usia Anda : 11\n",
+      "Masukan Kategori film anda dewaasa\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mohon Maaf anda tidak boleh menonton film tersebut\n"
+     ]
+    }
+   ],
    "source": [
-    "# add code here ..."
+    "usia = int(input(\"Masukam Usia Anda :\"))\n",
+    "kategori_film = input(\"Masukan Kategori film anda\")\n",
+    "\n",
+    "def boleh_ditonton(usia, kategori_film):\n",
+    "    if kategori_film.lower() == \"semua umur\":\n",
+    "        return True\n",
+    "    elif kategori_film.lower() == \"Remaja\":\n",
+    "        return usia >= 13\n",
+    "    elif kategori_film.lower() == \"Dewasa\":\n",
+    "        return usia >= 18\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "if boleh_ditonton(usia, kategori_film):\n",
+    "    print(\"Selamat anda Boleh MEnonton Film Tersebut\")\n",
+    "else:\n",
+    "    print(\"Mohon Maaf anda tidak boleh menonton film tersebut\")"
    ]
   },
   {
@@ -251,14 +311,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "966923a0-c87b-4559-8fc1-3090d448ad4a",
    "metadata": {
     "id": "966923a0-c87b-4559-8fc1-3090d448ad4a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Masukkan total belanja Anda (dalam Rp):  20000\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total belanja: Rp 20000.00\n",
+      "Diskon: Rp 0.00\n",
+      "Harga akhir setelah diskon: Rp 20000.00\n"
+     ]
+    }
+   ],
    "source": [
-    "# add code here"
+    "total_belanja = float(input(\"Masukkan total belanja Anda (dalam Rp): \"))\n",
+    "\n",
+    "def hitung_harga_akhir(total_belanja):\n",
+    "    if total_belanja >= 500000:\n",
+    "        diskon = 0.20 \n",
+    "    elif total_belanja >= 250000:\n",
+    "        diskon = 0.10  \n",
+    "    else:\n",
+    "        diskon = 0.0   \n",
+    "\n",
+    "    total_diskon = total_belanja * diskon\n",
+    "    harga_akhir = total_belanja - total_diskon\n",
+    "    return harga_akhir, total_diskon\n",
+    "\n",
+    "harga_akhir, total_diskon = hitung_harga_akhir(total_belanja)\n",
+    "\n",
+    "print(f\"Total belanja: Rp {total_belanja:.2f}\")\n",
+    "print(f\"Diskon: Rp {total_diskon:.2f}\")\n",
+    "print(f\"Harga akhir setelah diskon: Rp {harga_akhir:.2f}\")"
    ]
   },
   {
@@ -279,14 +374,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "b8f7b918-70a1-4a88-945f-406c4aafbec7",
    "metadata": {
     "id": "b8f7b918-70a1-4a88-945f-406c4aafbec7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Masukan Jenis Kendaraan Anda:  motor\n",
+      "Masukan Lama Parkir:  9\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Biaya parkir untuk anda (motor) selama 9.0 jam adalah Rp 28000.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# add code here"
+    "jenis_kendaraan = input(\"Masukan Jenis Kendaraan Anda: \")\n",
+    "lama_parkir = float(input(\"Masukan Lama Parkir: \"))\n",
+    "\n",
+    "def hitung_biaya(jenis_kendaraan, lama_parkir):\n",
+    "    if jenis_kendaraan.lower() == \"mobil\":\n",
+    "        biaya_perjam = 5000\n",
+    "    elif jenis_kendaraan.lower() == \"motor\":\n",
+    "        biaya_perjam = 2000\n",
+    "    else:\n",
+    "        return 0\n",
+    "\n",
+    "    total_bayar = biaya_perjam * lama_parkir\n",
+    "\n",
+    "    if lama_parkir > 5:\n",
+    "        total_bayar += 10000\n",
+    "\n",
+    "    return total_bayar\n",
+    "\n",
+    "total_biaya = hitung_biaya(jenis_kendaraan, lama_parkir)\n",
+    "if total_biaya == 0:\n",
+    "    print(\"Jenis Kendaraan tidak valid\")\n",
+    "else:\n",
+    "    print(f\"Total Biaya parkir untuk anda ({jenis_kendaraan}) selama {lama_parkir} jam adalah Rp {total_biaya}\")\n"
    ]
   },
   {
@@ -307,14 +440,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "5a5b719e-76f6-4f45-a8e4-07853113ce9e",
    "metadata": {
     "id": "5a5b719e-76f6-4f45-a8e4-07853113ce9e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Masukan Jarak Tempuh Perjalanan :  99\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tarif Perjalanan Untuk Jarak 99.0 KM adalah RP 297000.00\n"
+     ]
+    }
+   ],
    "source": [
-    "# add code here"
+    "jarak = float(input(\"Masukan Jarak Tempuh Perjalanan : \"))\n",
+    "\n",
+    "def hitung_tarif(jarak):\n",
+    "    if jarak <= 5:\n",
+    "        tarif = jarak * 5000\n",
+    "    elif 6 <= jarak <= 10:\n",
+    "        tarif = jarak * 4000\n",
+    "    else:\n",
+    "        tarif = jarak * 3000\n",
+    "    return tarif\n",
+    "\n",
+    "tarif_perjalanan = hitung_tarif(jarak)\n",
+    "print(f\"Tarif Perjalanan Untuk Jarak {jarak} KM adalah RP {tarif_perjalanan:.2f}\")\n"
    ]
   },
   {
@@ -343,14 +503,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "7aeb0f89-e957-4c0d-a29c-139fc269e1c0",
    "metadata": {
     "id": "7aeb0f89-e957-4c0d-a29c-139fc269e1c0"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Masukan NIlai coding : 99\n",
+      "Masukan NIlai Interview :  b\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selamat KAmu Berhasil Menjadi Calos Programmer\n"
+     ]
+    }
+   ],
    "source": [
-    "# add code here"
+    "nilai_coding = float(input(\"Masukan NIlai coding :\"))\n",
+    "nilai_interview = input(\"Masukan NIlai Interview : \").upper()\n",
+    "\n",
+    "def penilaian_coding(nilai_coding):\n",
+    "    if nilai_coding > 80:\n",
+    "        return \"LOLOS\"\n",
+    "    elif 60 <= nilai_coding <= 80:\n",
+    "        return \"DIPERTIMBANGKAN\"\n",
+    "    else:\n",
+    "        return \"GAGAL\"\n",
+    "\n",
+    "def penilaian_interview(nilai_interview):\n",
+    "    if nilai_interview in [\"A\",\"B\"]:\n",
+    "        return \"LOLOS\"\n",
+    "    else:\n",
+    "        return \"GAGAL\"\n",
+    "\n",
+    "hasil_coding = penilaian_coding(nilai_coding)\n",
+    "hasil_interview = penilaian_interview(nilai_interview)\n",
+    "\n",
+    "if (hasil_coding == \"LOLOS\" or hasil_coding == \"DIPERTIMBANGKAN\" ) and hasil_interview == \"LOLOS\":\n",
+    "    print(\"Selamat KAmu Berhasil Menjadi Calos Programmer\")\n",
+    "else:\n",
+    "    print(\"Maaf Kamu Belum Berhasil Menjadi Calon Programmer\")\n"
    ]
   },
   {
