--- a/Percabangan.ipynb
+++ b/Percabangan.ipynb
@@ -573,15 +573,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "2d1d5589-126b-44e3-9d9e-1bed865ff65c",
    "metadata": {
     "id": "2d1d5589-126b-44e3-9d9e-1bed865ff65c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Masukan Nomor Punggung :  99\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nomor Punggung : 99 dapat berfungsi sebagai posisi :\n",
+      "  Defender\n",
+      "  Playmaker\n"
+     ]
+    }
+   ],
    "source": [
-    "# add code here\n"
+    "nomor_punggung = int(input(\"Masukan Nomor Punggung : \"))\n",
+    "\n",
+    "def menentukan_posisi(nomor_punggung):\n",
+    "    posisi = []\n",
+    "\n",
+    "    if nomor_punggung % 2 == 0:\n",
+    "        posisi.append(\"target attacker\")\n",
+    "        if 50 <= nomor_punggung <= 100:\n",
+    "            posisi.append(\"Berhak Dipilih Menjadi Capten Team\")\n",
+    "\n",
+    "    if nomor_punggung % 2 != 0:\n",
+    "        posisi.append(\"Defender\")\n",
+    "        if nomor_punggung > 90:\n",
+    "            posisi.append(\"Playmaker\")\n",
+    "        if nomor_punggung % 3 == 0 and nomor_punggung % 5 == 0:\n",
+    "            posisi.append(\"Keeper\")\n",
+    "        return posisi\n",
+    "\n",
+    "hasil_posisi = menentukan_posisi(nomor_punggung)\n",
+    "\n",
+    "if hasil_posisi:\n",
+    "    print(\"Nomor Punggung :\", nomor_punggung, \"dapat berfungsi sebagai posisi :\")\n",
+    "    for p in hasil_posisi:\n",
+    "        print(\" \", p)\n",
+    "else :\n",
+    "    print(\"Nomor punggung \", nomor_punggung, \"Tidak Memenuh Syarat untuk posisi apapun\")\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb4d6e80-edee-4574-ae80-429a17f59e33",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
