update tugas dasprog sesi10

--- a/Percabangan.ipynb
+++ b/Percabangan.ipynb
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "id": "2d1d5589-126b-44e3-9d9e-1bed865ff65c",
    "metadata": {
     "id": "2d1d5589-126b-44e3-9d9e-1bed865ff65c"
@@ -583,16 +583,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Masukan Nomor Punggung :  99\n"
+      "Masukan Nomor Punggung :  88\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nomor Punggung : 99 dapat berfungsi sebagai posisi :\n",
-      "  Defender\n",
-      "  Playmaker\n"
+      "Nomor punggung  88 Tidak Memenuh Syarat untuk posisi apapun\n"
      ]
     }
    ],
@@ -622,17 +620,8 @@
     "    for p in hasil_posisi:\n",
     "        print(\" \", p)\n",
     "else :\n",
-    "    print(\"Nomor punggung \", nomor_punggung, \"Tidak Memenuh Syarat untuk posisi apapun\")\n",
-    "\n"
+    "    print(\"Nomor punggung \", nomor_punggung, \"Tidak Memenuh Syarat untuk posisi apapun\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb4d6e80-edee-4574-ae80-429a17f59e33",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
