--- a/Analisis Data Sederhana Tugas Sesi10.ipynb
+++ b/Analisis Data Sederhana Tugas Sesi10.ipynb
@@ -2,20 +2,153 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6e39f2a7-2201-4eff-9e6d-43e8c52c83c2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Id Pelanggan  Usia Jenis Kelamin   Wilayah  Jumlah Pembelian  \\\n",
+      "0            7231    54             P  Surabaya                10   \n",
+      "1            9941    60             L   Bandung                10   \n",
+      "2            2443    40             L  Surabaya                15   \n",
+      "3            8567    49             L     Medan                21   \n",
+      "4            7538    30             L     Medan                36   \n",
+      "..            ...   ...           ...       ...               ...   \n",
+      "995          6822    36             L   Bandung                42   \n",
+      "996          7396    45             P     Medan                30   \n",
+      "997          9102    53             L   Jakarta                30   \n",
+      "998          2304    20             P   Jakarta                 2   \n",
+      "999          3220    59             L   Jakarta                10   \n",
+      "\n",
+      "     Total Pengeluaran  Lama Bergabung (tahun) Tingkat Layanan Gunakan Ulang  \\\n",
+      "0              2882646                       5           Buruk         Tidak   \n",
+      "1              1028008                       4           Cukup         Tidak   \n",
+      "2               976441                       7            Baik            Ya   \n",
+      "3              2386013                       6           Buruk            Ya   \n",
+      "4              3539709                       9           Cukup         Tidak   \n",
+      "..                 ...                     ...             ...           ...   \n",
+      "995             434141                       6           Cukup         Tidak   \n",
+      "996            4415087                       8           Buruk            Ya   \n",
+      "997            3097317                       3            Baik         Tidak   \n",
+      "998            2533029                       6           Cukup            Ya   \n",
+      "999            4816581                       6           Cukup         Tidak   \n",
+      "\n",
+      "    Rekomendasi ke Teman Kepuasan Pelanggan  \n",
+      "0                  Tidak              Tidak  \n",
+      "1                  Tidak               Puas  \n",
+      "2                  Tidak               Puas  \n",
+      "3                     Ya               Puas  \n",
+      "4                  Tidak               Puas  \n",
+      "..                   ...                ...  \n",
+      "995                Tidak               Puas  \n",
+      "996                Tidak               Puas  \n",
+      "997                   Ya               Puas  \n",
+      "998                   Ya               Puas  \n",
+      "999                   Ya               Puas  \n",
+      "\n",
+      "[1000 rows x 11 columns]\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column                  Non-Null Count  Dtype \n",
+      "---  ------                  --------------  ----- \n",
+      " 0   Id Pelanggan            1000 non-null   int32 \n",
+      " 1   Usia                    1000 non-null   int32 \n",
+      " 2   Jenis Kelamin           1000 non-null   object\n",
+      " 3   Wilayah                 1000 non-null   object\n",
+      " 4   Jumlah Pembelian        1000 non-null   int32 \n",
+      " 5   Total Pengeluaran       1000 non-null   int32 \n",
+      " 6   Lama Bergabung (tahun)  1000 non-null   int32 \n",
+      " 7   Tingkat Layanan         1000 non-null   object\n",
+      " 8   Gunakan Ulang           1000 non-null   object\n",
+      " 9   Rekomendasi ke Teman    1000 non-null   object\n",
+      " 10  Kepuasan Pelanggan      1000 non-null   object\n",
+      "dtypes: int32(5), object(6)\n",
+      "memory usage: 66.5+ KB\n",
+      "None\n",
+      "   Id Pelanggan  Usia Jenis Kelamin   Wilayah  Jumlah Pembelian  \\\n",
+      "0          7231    54             P  Surabaya                10   \n",
+      "1          9941    60             L   Bandung                10   \n",
+      "2          2443    40             L  Surabaya                15   \n",
+      "3          8567    49             L     Medan                21   \n",
+      "4          7538    30             L     Medan                36   \n",
+      "\n",
+      "   Total Pengeluaran  Lama Bergabung (tahun) Tingkat Layanan Gunakan Ulang  \\\n",
+      "0            2882646                       5           Buruk         Tidak   \n",
+      "1            1028008                       4           Cukup         Tidak   \n",
+      "2             976441                       7            Baik            Ya   \n",
+      "3            2386013                       6           Buruk            Ya   \n",
+      "4            3539709                       9           Cukup         Tidak   \n",
+      "\n",
+      "  Rekomendasi ke Teman Kepuasan Pelanggan  \n",
+      "0                Tidak              Tidak  \n",
+      "1                Tidak               Puas  \n",
+      "2                Tidak               Puas  \n",
+      "3                   Ya               Puas  \n",
+      "4                Tidak               Puas  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "jumlah_data = 1000\n",
+    "\n",
+    "Id_Pelanggan = np.random.randint(1000, 10000, size=jumlah_data)\n",
+    "Usia = np.random.randint(18, 65, size=jumlah_data)\n",
+    "Jenis_Kelamin = np.random.choice(['L', 'P'], size=jumlah_data)\n",
+    "Wilayah = np.random.choice(['Jakarta', 'Bandung', 'Surabaya', 'Medan'], size=jumlah_data)\n",
+    "Jumlah_Pembelian = np.random.randint(1, 50, size=jumlah_data)\n",
+    "Total_Pengeluaran = np.random.randint(50000, 5000000, size=jumlah_data)\n",
+    "Lama_Bergabung = np.random.randint(1, 10, size=jumlah_data)\n",
+    "Tingkat_Layanan = np.random.choice(['Buruk', 'Cukup', 'Baik', 'Sangat Baik'], size=jumlah_data)\n",
+    "Gunakan_Ulang = np.random.choice(['Ya', 'Tidak'], size=jumlah_data)\n",
+    "Rekomendasi_Teman = np.random.choice(['Ya', 'Tidak'], size=jumlah_data)\n",
+    "Kepuasan_Pelanggan = np.random.choice(['Puas', 'Tidak'], size=jumlah_data)\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "    'Id Pelanggan': Id_Pelanggan,\n",
+    "    'Usia': Usia,\n",
+    "    'Jenis Kelamin': Jenis_Kelamin,\n",
+    "    'Wilayah': Wilayah,\n",
+    "    'Jumlah Pembelian': Jumlah_Pembelian,\n",
+    "    'Total Pengeluaran': Total_Pengeluaran,\n",
+    "    'Lama Bergabung (tahun)': Lama_Bergabung,\n",
+    "    'Tingkat Layanan': Tingkat_Layanan,\n",
+    "    'Gunakan Ulang': Gunakan_Ulang,\n",
+    "    'Rekomendasi ke Teman': Rekomendasi_Teman,\n",
+    "    'Kepuasan Pelanggan': Kepuasan_Pelanggan\n",
+    "})\n",
+    "\n",
+    "print(df)\n",
+    "print(df.info())\n",
+    "print(df.head())\n",
+    "\n",
+    "df.to_csv(\"Data_Kepuasan_Pelanggan.csv\", index=False)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
-   "name": ""
+   "display_name": "Python [conda env:base] *",
+   "language": "python",
+   "name": "conda-base-py"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
