--- a/importModul/main.ipynb
+++ b/importModul/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 73,
    "id": "34112f0a-56b7-46c2-b6bd-f04c4d55cb92",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "ec595566-d0c3-4ad7-8356-07b618bfcf6a",
    "metadata": {},
    "outputs": [
@@ -94,37 +94,36 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Isikan Pilihan: 3\n"
+      "Isikan Pilihan:  2\n",
+      "Isikan Panjang:  1000\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "    1. desimal Ke Biner\n",
-      "    2. desimal Ke Oktal\n",
-      "    3. desimal ke Hexadesimal\n",
-      "    \n"
+      "1. cm ke meter\n",
+      "2. meter ke cm\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Isikan Pilihan Ubah Bilangan:  1\n",
-      "Isikan angka desimal :  10\n"
+      "Pilih:  1\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'b' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[63], line 60\u001b[0m\n\u001b[0;32m     58\u001b[0m n \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIsikan angka desimal : \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m     59\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m pilihBilangan\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m---> 60\u001b[0m     \u001b[38;5;28mprint\u001b[39m(b\u001b[38;5;241m.\u001b[39mdesimalToBiner(n))\n\u001b[0;32m     61\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m pilihBilangan\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m2\u001b[39m:\n\u001b[0;32m     62\u001b[0m     \u001b[38;5;28mprint\u001b[39m(b\u001b[38;5;241m.\u001b[39mdesimalToOktal(n))\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'b' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hasil: 10.0 meter\n",
+      "\n",
+      "    1. Aritmatika\n",
+      "    2. Convert\n",
+      "    3. Bilangan\n",
+      "    4. Exit\n",
+      "    \n"
      ]
     }
    ],
@@ -159,45 +158,50 @@
     "\n",
     "while True:\n",
     "    menuUtama()\n",
-    "    pilihMenu = int(input(\"Isikan Pilihan:\"))\n",
-    "    if pilihMenu==1:\n",
+    "    pilihMenu = int(input(\"Isikan Pilihan: \"))\n",
+    "    \n",
+    "    if pilihMenu == 1:\n",
     "        menuAritmatika()\n",
     "        pilihAritmatika = int(input(\"Isikan Pilihan Aritmatika: \"))\n",
     "        b1 = int(input(\"Isikan bilangan 1 : \"))\n",
     "        b2 = int(input(\"Isikan bilangan 2 : \"))\n",
-    "        if pilihAritmatika==1:\n",
-    "            print(m.add(b1,b2))\n",
-    "        elif pilihAritmatika==2:\n",
-    "            print(m.pow(b1,b2))\n",
-    "        elif pilihAritmatika==3:\n",
-    "            print(m.multiply(b1,b2))\n",
+    "        if pilihAritmatika == 1:\n",
+    "            print(m.add(b1, b2))\n",
+    "        elif pilihAritmatika == 2:\n",
+    "            print(m.pow(b1, b2))\n",
+    "        elif pilihAritmatika == 3:\n",
+    "            print(m.multiply(b1, b2))\n",
     "            break\n",
-    "        \n",
-    "    elif pilihMenu==2:\n",
-    "        menuConvert()\n",
-    "        pilihConvert = int(input(\"Isikan Pilihan Convert: \"))\n",
-    "        p = int(input(\"Isikan Panjang : \"))\n",
-    "        if pilihConvert==1:\n",
-    "            print(c.cmToMeter(p))\n",
-    "        elif pilihConvert==2:\n",
-    "            print(c.meterToCm(p))\n",
-    "            break\n",
-    "            \n",
-    "    elif pilihMenu==3:\n",
+    "\n",
+    "    elif pilihMenu == 2:\n",
+    "        panjang = int(input(\"Isikan Panjang: \"))\n",
+    "        print(\"1. cm ke meter\")\n",
+    "        print(\"2. meter ke cm\")\n",
+    "        pilihConvert = int(input(\"Pilih: \"))\n",
+    "\n",
+    "        if pilihConvert == 1:\n",
+    "            print(\"Hasil:\", cmToMeter(panjang), \"meter\")\n",
+    "        elif pilihConvert == 2:\n",
+    "            print(\"Hasil:\", meterToCm(panjang), \"cm\")\n",
+    "        else:\n",
+    "            print(\"Pilihan tidak valid.\")\n",
+    "\n",
+    "    elif pilihMenu == 3:\n",
     "        menuBilangan()\n",
     "        pilihBilangan = int(input(\"Isikan Pilihan Ubah Bilangan: \"))\n",
     "        n = int(input(\"Isikan angka desimal : \"))\n",
-    "        if pilihBilangan==1:\n",
+    "        if pilihBilangan == 1:\n",
     "            print(b.desimalToBiner(n))\n",
-    "        elif pilihBilangan==2:\n",
+    "        elif pilihBilangan == 2:\n",
     "            print(b.desimalToOktal(n))\n",
-    "        elif pilihBilangan==3:\n",
+    "        elif pilihBilangan == 3:\n",
     "            print(b.desimalToHexadesimal(n))\n",
     "            break\n",
     "\n",
-    "    elif pilihMenu==4:\n",
+    "    elif pilihMenu == 4:\n",
     "        print(\"Thank You!!\")\n",
-    "        break "
+    "        break\n",
+    "\n"
    ]
   }
  ],
