--- a/importModul/main.ipynb
+++ b/importModul/main.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ec595566-d0c3-4ad7-8356-07b618bfcf6a",
    "metadata": {},
    "outputs": [
@@ -94,8 +94,24 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Isikan Pilihan:  2\n",
-      "Isikan Panjang:  1000\n"
+      "Isikan Pilihan:  2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    1. cm To Meter\n",
+      "    2. Meter To Cm\n",
+      "    \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Masukkan panjang:  1\n"
      ]
     },
     {
@@ -117,13 +133,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hasil: 10.0 meter\n",
+      "Hasil: 0.01 meter\n",
       "\n",
       "    1. Aritmatika\n",
       "    2. Convert\n",
       "    3. Bilangan\n",
       "    4. Exit\n",
       "    \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Isikan Pilihan:  \n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 37\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m     36\u001b[0m     menuUtama()\n\u001b[1;32m---> 37\u001b[0m     pilihMenu \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIsikan Pilihan: \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m     39\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m pilihMenu \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m     40\u001b[0m         menuAritmatika()\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
      ]
     }
    ],
@@ -156,52 +190,54 @@
     "    3. desimal ke Hexadesimal\n",
     "    \"\"\")\n",
     "\n",
+    "def cmToMeter(cm):\n",
+    "    return cm / 100\n",
+    "\n",
+    "def meterToCm(meter):\n",
+    "    return meter * 100\n",
+    "\n",
     "while True:\n",
     "    menuUtama()\n",
     "    pilihMenu = int(input(\"Isikan Pilihan: \"))\n",
-    "    \n",
+    "\n",
     "    if pilihMenu == 1:\n",
     "        menuAritmatika()\n",
     "        pilihAritmatika = int(input(\"Isikan Pilihan Aritmatika: \"))\n",
     "        b1 = int(input(\"Isikan bilangan 1 : \"))\n",
     "        b2 = int(input(\"Isikan bilangan 2 : \"))\n",
     "        if pilihAritmatika == 1:\n",
-    "            print(m.add(b1, b2))\n",
+    "            print(\"Hasil:\", m.add(b1, b2))\n",
     "        elif pilihAritmatika == 2:\n",
-    "            print(m.pow(b1, b2))\n",
+    "            print(\"Hasil:\", m.pow(b1, b2))\n",
     "        elif pilihAritmatika == 3:\n",
-    "            print(m.multiply(b1, b2))\n",
-    "            break\n",
+    "            print(\"Hasil:\", m.multiply(b1, b2))\n",
     "\n",
     "    elif pilihMenu == 2:\n",
-    "        panjang = int(input(\"Isikan Panjang: \"))\n",
+    "        menuConvert()\n",
+    "        panjang = float(input(\"Masukkan panjang: \"))\n",
     "        print(\"1. cm ke meter\")\n",
     "        print(\"2. meter ke cm\")\n",
     "        pilihConvert = int(input(\"Pilih: \"))\n",
     "\n",
     "        if pilihConvert == 1:\n",
     "            print(\"Hasil:\", cmToMeter(panjang), \"meter\")\n",
-    "        elif pilihConvert == 2:\n",
-    "            print(\"Hasil:\", meterToCm(panjang), \"cm\")\n",
     "        else:\n",
-    "            print(\"Pilihan tidak valid.\")\n",
+    "            print(\"Hasil:\", meterToCm(panjang), \"cm\")\n",
     "\n",
     "    elif pilihMenu == 3:\n",
     "        menuBilangan()\n",
     "        pilihBilangan = int(input(\"Isikan Pilihan Ubah Bilangan: \"))\n",
     "        n = int(input(\"Isikan angka desimal : \"))\n",
     "        if pilihBilangan == 1:\n",
-    "            print(b.desimalToBiner(n))\n",
+    "            print(\"Hasil:\", b.desimalToBiner(n))\n",
     "        elif pilihBilangan == 2:\n",
-    "            print(b.desimalToOktal(n))\n",
+    "            print(\"Hasil:\", b.desimalToOktal(n))\n",
     "        elif pilihBilangan == 3:\n",
-    "            print(b.desimalToHexadesimal(n))\n",
-    "            break\n",
+    "            print(\"Hasil:\", b.desimalToHexadesimal(n))\n",
     "\n",
     "    elif pilihMenu == 4:\n",
     "        print(\"Thank You!!\")\n",
-    "        break\n",
-    "\n"
+    "        break\n"
    ]
   }
  ],
