--- a/importModul/main.ipynb
+++ b/importModul/main.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "ec595566-d0c3-4ad7-8356-07b618bfcf6a",
    "metadata": {},
    "outputs": [
@@ -94,74 +94,31 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Isikan Pilihan:  2\n"
+      "Isikan Pilihan:  4\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "    1. cm To Meter\n",
-      "    2. Meter To Cm\n",
-      "    \n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Masukkan panjang:  1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1. cm ke meter\n",
-      "2. meter ke cm\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Pilih:  1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hasil: 0.01 meter\n",
-      "\n",
-      "    1. Aritmatika\n",
-      "    2. Convert\n",
-      "    3. Bilangan\n",
-      "    4. Exit\n",
-      "    \n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Isikan Pilihan:  \n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 37\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m     36\u001b[0m     menuUtama()\n\u001b[1;32m---> 37\u001b[0m     pilihMenu \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIsikan Pilihan: \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m     39\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m pilihMenu \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m     40\u001b[0m         menuAritmatika()\n",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+      "Thank You!!\n"
      ]
     }
    ],
    "source": [
+    "\n",
+    "import operator as m\n",
+    "\n",
+    "class b:\n",
+    "    def desimalToBiner(n):\n",
+    "        return bin(n)\n",
+    "        \n",
+    "    def desimalToOktal(n):\n",
+    "        return oct(n)\n",
+    "\n",
+    "    def desimalToHexadesimal(n):\n",
+    "        return hex(n)\n",
+    "\n",
     "def menuUtama():\n",
     "    print(\"\"\"\n",
     "    1. Aritmatika\n",
@@ -199,7 +156,7 @@
     "while True:\n",
     "    menuUtama()\n",
     "    pilihMenu = int(input(\"Isikan Pilihan: \"))\n",
-    "\n",
+    "    \n",
     "    if pilihMenu == 1:\n",
     "        menuAritmatika()\n",
     "        pilihAritmatika = int(input(\"Isikan Pilihan Aritmatika: \"))\n",
@@ -210,7 +167,7 @@
     "        elif pilihAritmatika == 2:\n",
     "            print(\"Hasil:\", m.pow(b1, b2))\n",
     "        elif pilihAritmatika == 3:\n",
-    "            print(\"Hasil:\", m.multiply(b1, b2))\n",
+    "            print(\"Hasil:\", m.mul(b1, b2))\n",
     "\n",
     "    elif pilihMenu == 2:\n",
     "        menuConvert()\n",
