--- a/TUGAS SESI 11 FUNCTION.ipynb
+++ b/TUGAS SESI 11 FUNCTION.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "91b2a019-0bb6-4f85-89c1-bb7fb5402852",
    "metadata": {},
    "outputs": [
@@ -18,44 +18,57 @@
     }
    ],
    "source": [
-    "#Tulis Fungsi Pertama: reverse_per_kata()\n",
-    "#Tujuan: Membalik setiap kata, tapi tidak mengubah urutan kata.\n",
+    "# Fungsi untuk membalik setiap kata dalam kalimat\n",
     "def reverse_per_kata(kalimat):\n",
-    "    #Memecah kalimat jadi kata-kata\n",
+    "    # Pisahkan kalimat menjadi list kata\n",
     "    kata_list = kalimat.split()\n",
-    "    #Membalik huruf dalam setiap kata\n",
+    "    # Balik huruf dalam setiap kata dengan slicing [::-1]\n",
     "    dibalik = [kata[::-1] for kata in kata_list]\n",
-    "    #Menggabungkan kembali\n",
+    "    # Gabungkan kembali kata yang sudah dibalik menjadi satu kalimat\n",
     "    return ' '.join(dibalik)\n",
     "\n",
-    "#Tulis Fungsi Kedua: urutkan_kalimat()\n",
-    "#ujuan: Menyusun ulang kata dalam kalimat sesuai indeks (1-based).\n",
+    "# Fungsi untuk mengurutkan ulang kata-kata sesuai indeks urutan (1-based)\n",
     "def urutkan_kalimat(kalimat, urutan):\n",
+    "    # Pisahkan kalimat menjadi list kata\n",
     "    kata_list = kalimat.split()\n",
+    "    # Ambil kata sesuai indeks dalam list urutan (dikurangi 1 karena index Python mulai dari 0)\n",
     "    hasil = [kata_list[i - 1] for i in urutan]\n",
+    "    # Gabungkan kembali kata yang sudah diurutkan menjadi kalimat\n",
     "    return ' '.join(hasil)\n",
     "\n",
-    "#Tulis Fungsi Ketiga: ganti_vokal()\n",
-    "#Tujuan: Mengganti vokal berdasarkan opsi (1 = huruf kecil, 2 = huruf besar)\n",
+    "# Fungsi untuk mengganti huruf vokal dengan simbol tertentu\n",
     "def ganti_vokal(kalimat, opsi):\n",
+    "    # Dictionary untuk mengganti huruf vokal kecil\n",
     "    vokal_kecil = {'a': '4', 'i': '1', 'u': '|_|', 'e': '3', 'o': '0'}\n",
+    "    # Dictionary untuk mengganti huruf vokal besar\n",
     "    vokal_besar = {'A': '4', 'I': '1', 'U': '|_|', 'E': '3', 'O': '0'}\n",
     "\n",
     "    hasil = ''\n",
+    "    # Telusuri setiap huruf dalam kalimat\n",
     "    for huruf in kalimat:\n",
+    "        # Jika opsi = 1, ubah hanya vokal kecil\n",
     "        if opsi == 1 and huruf in vokal_kecil:\n",
     "            hasil += vokal_kecil[huruf]\n",
+    "        # Jika opsi = 2, ubah hanya vokal kapital\n",
     "        elif opsi == 2 and huruf in vokal_besar:\n",
     "            hasil += vokal_besar[huruf]\n",
+    "        # Jika bukan vokal sesuai opsi, tambahkan huruf asli\n",
     "        else:\n",
     "            hasil += huruf\n",
     "    return hasil\n",
     "\n",
-    "print(reverse_per_kata(\"AKU CINTA KAMU\"))  # Output: \"UKA ATNIC UMAK\"\n",
+    "\n",
+    "print(reverse_per_kata(\"AKU CINTA KAMU\"))\n",
+    "# Output: \"UKA ATNIC UMAK\"\n",
+    "\n",
     "print(urutkan_kalimat(\"HARI INI SEDANG BELAJAR PYTHON\", [5, 1, 4, 3, 2]))\n",
     "# Output: \"PYTHON HARI BELAJAR SEDANG INI\"\n",
-    "print(ganti_vokal(\"Aku Cinta Kamu\", 1))  # Output: \"Ak|_| C1nt4 K4m|_|\"\n",
-    "print(ganti_vokal(\"Aku Cinta Kamu\", 2))  # Output: \"4ku Cinta Kamu\"\n"
+    "\n",
+    "print(ganti_vokal(\"Aku Cinta Kamu\", 1))\n",
+    "# Output: \"Ak|_| C1nt4 K4m|_|\"\n",
+    "\n",
+    "print(ganti_vokal(\"Aku Cinta Kamu\", 2))\n",
+    "# Output: \"4ku Cinta Kamu\"\n"
    ]
   }
  ],
