--- a/TUGAS SESI 14.ipynb
+++ b/TUGAS SESI 14.ipynb
@@ -22,80 +22,18 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Pilih menu (1-4):  4\n",
-      "Masukkan NIM yang dicari:  200000000000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data tidak ditemukan.\n",
-      "\n",
-      "Menu:\n",
-      "1. Tambah Data Siswa\n",
-      "2. Tampilkan Data\n",
-      "3. Exit\n",
-      "4. Cari Data\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
       "Pilih menu (1-4):  1\n",
       "Masukkan NIM (11 karakter):  20240040290\n",
-      "Masukkan Nama (min 3 karakter):  ASEP BULAN\n",
-      "Masukkan Alamat (min 5 karakter):  CIBOLANG KIDUL\n"
+      "Masukkan Nama (min 3 karakter):  ASEP\n",
+      "Masukkan Alamat (min 5 karakter):  NUSPUTTT\n",
+      "Masukkan Kelas (TI24H, TI24F, TI24G, TI24A):  TI25J\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data berhasil ditambahkan.\n",
-      "\n",
-      "\n",
-      "Menu:\n",
-      "1. Tambah Data Siswa\n",
-      "2. Tampilkan Data\n",
-      "3. Exit\n",
-      "4. Cari Data\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Pilih menu (1-4):  2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NIM: 20240040290, Nama: ASEP BULAN, Alamat: CIBOLANG KIDUL\n",
-      "\n",
-      "Menu:\n",
-      "1. Tambah Data Siswa\n",
-      "2. Tampilkan Data\n",
-      "3. Exit\n",
-      "4. Cari Data\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Pilih menu (1-4):  4\n",
-      "Masukkan NIM yang dicari:  20240040290\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data ditemukan: {'nama': 'ASEP BULAN', 'alamat': 'CIBOLANG KIDUL'}\n",
+      "ValueError: Kelas tidak valid! Harus TI24H, TI24F, TI24G, atau TI24A.\n",
       "\n",
       "Menu:\n",
       "1. Tambah Data Siswa\n",
@@ -122,7 +60,15 @@
     "        if len(alamat) < 5:\n",
     "            raise ValueError(\"Alamat terlalu pendek!\")\n",
     "\n",
-    "        data_siswa[nim] = {'nama': nama, 'alamat': alamat}\n",
+    "        kelas = input(\"Masukkan Kelas (TI24H, TI24F, TI24G, TI24A): \").upper()\n",
+    "        if kelas not in ['TI24H', 'TI24F', 'TI24G', 'TI24A']:\n",
+    "            raise ValueError(\"Kelas tidak valid! Harus TI24H, TI24F, TI24G, atau TI24A.\")\n",
+    "\n",
+    "        data_siswa[nim] = {\n",
+    "            'nama': nama,\n",
+    "            'alamat': alamat,\n",
+    "            'kelas': kelas\n",
+    "        }\n",
     "        print(\"Data berhasil ditambahkan.\\n\")\n",
     "\n",
     "    except ValueError as ve:\n",
@@ -138,7 +84,7 @@
     "    if not data_siswa:\n",
     "        print(\"Data kosong.\")\n",
     "    for nim, info in data_siswa.items():\n",
-    "        print(f\"NIM: {nim}, Nama: {info['nama']}, Alamat: {info['alamat']}\")\n",
+    "        print(f\"NIM: {nim}, Nama: {info['nama']}, Alamat: {info['alamat']}, Kelas: {info['kelas']}\")\n",
     "\n",
     "def cari_data():\n",
     "    cari_nim = input(\"Masukkan NIM yang dicari: \")\n",
@@ -146,7 +92,6 @@
     "        print(\"Data ditemukan:\", data_siswa[cari_nim])\n",
     "    else:\n",
     "        print(\"Data tidak ditemukan.\")\n",
-    "\n",
     "\n",
     "while True:\n",
     "    print(\"\\nMenu:\")\n",
